@@ -44,6 +44,7 @@ common_src = Split("base64.c buffer.c log.c \
 	stat_cache.c plugin.c joblist.c etag.c array.c \
 	data_string.c data_count.c data_array.c \
 	data_integer.c md5.c data_fastcgi.c \
+	vector.c \
 	fdevent_select.c fdevent_libev.c \
 	fdevent_poll.c fdevent_linux_sysepoll.c \
 	fdevent_solaris_devpoll.c fdevent_solaris_port.c \
